--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.assignment">
+    package="com.example.assignment" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,14 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".UserProfileActivity.UserApprovalRequest"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UserProfileActivity.UserPersonalInfo"
-            android:exported="false" />
-        <activity
-            android:name=".UserProfileActivity.UserSetPersonalInfo"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UserRegister"
             android:exported="false"
@@ -33,7 +34,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
