--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,23 +19,41 @@
         android:theme="@style/Theme.Assignment"
         tools:targetApi="31">
         <activity
+            android:name=".UserlistActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DisplayingFoodRequestRecord"
+            android:exported="false" />
+        <activity
+            android:name=".DisplayingFoodDonateRecord"
+            android:exported="false" />
+        <activity
+            android:name=".DisplayFoodRecord"
+            android:exported="false" />
+        <activity
+            android:name=".FoodRequestForm"
+            android:exported="false" />
+        <activity
+            android:name=".FoodDonationForm"
+            android:exported="false" />
+        <activity
             android:name=".AdminProfileActivity.CheckSingleApprovedUser"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AdminProfileActivity.ReviewSingelApprovalApplication"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AdminProfileActivity.CheckApprovedUsers"
             android:exported="false"
             android:label="@string/title_activity_check_approved_users"
-            android:theme="@style/Theme.Assignment.NoActionBar"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Assignment.NoActionBar" />
         <activity
             android:name=".AdminProfileActivity.ReviewOfApprovalApplication"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
