30/9/2022 change layout & confirm order button function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Assignment"
         tools:targetApi="31">
         <activity
-            android:name=".SearchingFoodActivity.listUserOrdered"
+            android:name=".SearchingFoodActivity.listOrdered"
             android:exported="false" />
         <activity
             android:name=".SearchingFoodActivity.listStation"
